package br.com.igormedeiros.model;


public class Person {
	
	private String name;
	private String email;
	private Company company;

}
